Closed
Bug 1639626
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::layers::CanvasTranslator::CreateDrawTarget]
Categories
(Core :: Graphics: Canvas2D, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla78
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox76 | --- | unaffected |
firefox77 | --- | disabled |
firefox78 | --- | fixed |
People
(Reporter: bobowen, Assigned: bobowen)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-febd98a2-8628-46b0-adbf-20a540200513.
Top 10 frames of crashing thread:
0 xul.dll mozilla::layers::CanvasTranslator::CreateDrawTarget gfx/layers/ipc/CanvasTranslator.cpp:375
1 xul.dll mozilla::gfx::RecordedDrawTargetCreation::PlayEvent const gfx/2d/RecordedEventImpl.h:1866
2 xul.dll static mozilla::gfx::RecordedEvent::DoWithEvent<mozilla::gfx::EventRingBuffer> gfx/2d/RecordedEventImpl.h:3875
3 xul.dll mozilla::layers::CanvasTranslator::TranslateRecording gfx/layers/ipc/CanvasTranslator.cpp:192
4 xul.dll mozilla::layers::CanvasTranslator::StartTranslation gfx/layers/ipc/CanvasTranslator.cpp:154
5 xul.dll mozilla::detail::RunnableMethodImpl< xpcom/threads/nsThreadUtils.h:1220
6 xul.dll mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:208
7 xul.dll nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:297
8 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1200
9 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:481
Assignee | ||
Comment 1•5 years ago
|
||
Assignee | ||
Updated•5 years ago
|
Crash Signature: [@ mozilla::layers::CanvasTranslator::CreateDrawTarget] → [@ mozilla::layers::CanvasTranslator::CreateDrawTarget]
[@ mozilla::layers::CanvasTranslator::RemoveDrawTarget ]
Pushed by bobowencode@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/29b861402014
Hold BackendType in CanvasTranslator to guard against the reference DrawTarget being null. r=mattwoodrow
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox78:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Updated•5 years ago
|
status-firefox76:
--- → unaffected
status-firefox77:
--- → disabled
status-firefox-esr68:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•