Bug 1639626: Hold BackendType in CanvasTranslator to guard against the reference DrawTarget being null. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D76177