gfx/layers/ipc/CanvasTranslator.h
@@ -242,6 +242,11 @@ class CanvasTranslator final : public gfx::InlineTranslator,
   UniquePtr<gfx::DataSourceSurface::ScopedMap> GetPreparedMap(
       gfx::ReferencePtr aSurface);
 
+  /**
+   * @return the BackendType being used for translation
+   */
+  gfx::BackendType GetBackendType() { return mBackendType; }
+
  private:
   explicit CanvasTranslator(
       already_AddRefed<CanvasThreadHolder> aCanvasThreadHolder);
@@ -277,6 +282,9 @@ class CanvasTranslator final : public gfx::InlineTranslator,
   UniquePtr<CanvasEventRingBuffer> mStream;
   TextureType mTextureType = TextureType::Unknown;
   UniquePtr<TextureData> mReferenceTextureData;
+  // Sometimes during device reset our reference DrawTarget can be null, so we
+  // hold the BackendType separately.
+  gfx::BackendType mBackendType = gfx::BackendType::NONE;
   typedef std::unordered_map<void*, UniquePtr<TextureData>> TextureMap;
   TextureMap mTextureDatas;
   nsRefPtrHashtable<nsPtrHashKey<void>, gfx::DataSourceSurface> mDataSurfaces;
